# Excel-MCP-Server-Master

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  PROJECT_STRUCTURE.md  QUICK_INSTALL.md  README.md  advanced_excel_mcp.py  excel_extra_operations_mcp.py  excel_mcp_complete.py  excel_writer_mcp.py  index.js  master_excel_mcp.py  mcp-config-example.json  package.json  pyproject.toml  requirements.txt  setup.py  workbook_manager_mcp.py
docs/: api-reference.md  examples.md  quick-start.md  troubleshooting.md
examples/: simple_report.md
tests/: README.md  __init__.py  test_basic_operations.py
