[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-mcp-server"
version = "1.0.3"
description = "A comprehensive Model Context Protocol (MCP) server for Excel file manipulation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Guillem Hermida", email = "qtmsuite@gmail.com"}
]
maintainers = [
    {name = "Guillem Hermida", email = "qtmsuite@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
keywords = ["mcp", "excel", "openpyxl", "automation", "ai", "llm"]
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "xlsxwriter>=3.1.0",
    "xlrd>=2.0.0",
    "xlwt>=1.3.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/guillehr2/Excel-MCP-Server-Master"
Documentation = "https://github.com/guillehr2/Excel-MCP-Server-Master#readme"
Repository = "https://github.com/guillehr2/Excel-MCP-Server-Master.git"
Issues = "https://github.com/guillehr2/Excel-MCP-Server-Master/issues"

[project.scripts]
excel-mcp-server = "master_excel_mcp:main"

[tool.setuptools]
py-modules = ["master_excel_mcp"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
